[package]
name = "mod_player"
version = "0.1.0"
authors = ["Jani Peltonen<jani.peltonen@gmail.com>"]
edition = "2018"
description = "A library for parsing and playing mod music files"
keyword = [ "mod", "audio", "amiga", "player", "music" ]
license = "MIT"

[dev-dependencies]
cpal = "0.8.2"
hound = "3.4.0"

[dependencies]


[rust]
backtrace = true