[package]
name = "mod_player"
version = "0.1.4"
authors = ["Jani Peltonen<jani.peltonen@gmail.com>"]
edition = "2018"
description = "A library for parsing and playing mod music files"
keyword = [ "mod", "audio", "amiga", "player", "music" ]
categories = [ "games", "multimedia::audio" ]
license = "MIT"
repository = "https://github.com/janiorca/mod_player"
readme = "readme.md"

[dev-dependencies]
cpal = "0.8.2"
hound = "3.4.0"
crc = "1.8.1"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"

[dependencies]


[rust]
backtrace = true